# Conways-Game-of-Life

./: .gitignore  README.md  life.py  main.py  patterns.py  pyproject.toml  requirements.txt
assets/: ConwaysGameOfLife.icns
tests/: test_life.py
