[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "conways-game-of-life"
version = "1.0.9"
description = "A native-feeling macOS implementation of Conway's Game of Life"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.8",
  "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.scripts]
conways-game-of-life = "main:main"

[tool.setuptools]
py-modules = ["life", "main", "patterns"]

[tool.setuptools.data-files]
"share/conways-game-of-life" = [
  "assets/ConwaysGameOfLife.icns",
  "assets/conways-life-icon.png",
]
